Tue Apr 24 04:55:45 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Add missing ')' to the error messages when zlib stuff
	  isn't found.

Tue Apr 24 02:56:57 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.h,
	  backends/inmemory/inmemory_database.h,
	  backends/quartz/quartz_database.h: MSVC doesn't handle using
	  properly.

Tue Apr 24 01:25:34 BST 2007  Olly Betts <olly@survex.com>

	* matcher/bm25weight.cc,matcher/expandweight.cc: Fix typo in comments:
	  'releveant' -> 'relevant'.

Mon Apr 23 23:00:23 BST 2007  Olly Betts <olly@survex.com>

	* api/omenquire.cc,docs/deprecation.rst,include/xapian/enquire.h,
	  tests/api_anydb.cc,tests/api_db.cc: Deprecate
	  Enquire::include_query_terms and Enquire::use_exact_termfreq in
	  favour of capitalised versions Enquire::INCLUDE_QUERY_TERMS and
	  Enquire::USE_EXACT_TERMFREQ (for consistency with our other
	  manifest constants, and general C/C++ conventions).

Mon Apr 23 18:14:20 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc,backends/quartz/btree.cc: Support for
	  VLAs in C++ is a GCC extension, so eliminate the need for them.

Mon Apr 23 16:32:07 BST 2007  Olly Betts <olly@survex.com>

	* docs/: svn:ignore deprecation.html. svn:ignore apidoc.pdf and
	  sourcedoc.pdf rather than *.pdf.

Mon Apr 23 16:08:53 BST 2007  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Resolve FIXME about MapTermList.

Mon Apr 23 16:06:38 BST 2007  Olly Betts <olly@survex.com>

	* api/valuerangeproc.cc,backends/flint/flint_check.cc,
	  backends/flint/flint_table.cc,backends/quartz/btree.cc,
	  backends/quartz/btreecheck.cc,bin/xapian-tcpsrv.cc,examples/,
	  languages/steminternal.h,tests/harness/testsuite.cc,
	  tests/harness/testsuite.h,tests/stemtest.cc: Fix compilation with
	  GCC 4.3 snapshot.

Mon Apr 23 15:20:55 BST 2007  Olly Betts <olly@survex.com>

	* common/safeunistd.h: Comment tweaks.

Mon Apr 23 11:54:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>
